# PonyNotes-New

./: .gitignore  DATABASE_EVENT_COMMUNICATION.md  DEBUG_GUIDE.md  README.md  commitlint.config.js  install.sh  test_scheme.html  重新签名指南.md
.github/workflows/: build_macos_universal_lib.yaml  commit_lint.yml  docker_ci.yml  flutter_ci.yaml  ios_ci.yaml  rust_ci.yaml  rust_coverage.yml  translation_notify.yml
backup/20260516-070454-ponynotes-settings-dialog-sidebar-wake-post-change-skip-ci/: atomic-operation.md
binaries/macos/: libponynotes_xournalpp.dylib
docs/: AI功能实现详细说明.md  AI功能快速参考.md  AI架构与数据流详解.md  README-AI文档导航.md
frontend/: Makefile.toml  build_rust_android.sh  build_rust_ios.sh  build_rust_release.sh  select_dart_ffi_lib.sh
frontend/appflowy_flutter/: .gitignore  COCOAPODS_FIX.md  Makefile  README.md  ai_config_example.env  analysis_options.yaml  baidu_cloud_config_example.env  dev.env  pubspec.yaml
frontend/appflowy_flutter/android/: build.gradle  gradle.properties  keystore.properties  ponynotes.keystore  settings.gradle
frontend/appflowy_flutter/ckdocs/: ARCHITECTURE.md  DOCS_INDEX.md  ENV_CONFIG_GUIDE.md  HOMEPAGE_INTEGRATION.md  LOCALHOST_DOCKER_SETUP.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README_HOMEPAGE.md  RUST_BACKEND_STATUS.md  手机验证码登录注册完整实现文档.md
frontend/appflowy_flutter/ios/: Podfile
frontend/appflowy_flutter/lib/: main.dart
frontend/appflowy_flutter/linux/: CMakeLists.txt
frontend/appflowy_flutter/macos/: Podfile  README_RESIGN.md  resign_app.sh
frontend/appflowy_flutter/scripts/: validate_release_env.ps1
frontend/appflowy_flutter/windows/: CMakeLists.txt
frontend/proto/flowy-user/: workspace_settings.proto
frontend/resources/translations/: am-ET.json  ar-SA.json  ca-ES.json  ckb-KU.json  cs-CZ.json  de-DE.json  el-GR.json  en-GB.json  en-US.json  es-VE.json  eu-ES.json  fa.json  fr-CA.json  fr-FR.json  ga-IE.json  he.json  hin.json  hu-HU.json  id-ID.json  it-IT.json  (+14 more)
frontend/rust-lib/: Cargo.toml  copy_android_libs.ps1  rust-toolchain.toml
frontend/rust-lib/flowy-handwriting-saber/: Cargo.toml  build.rs
frontend/rust-lib/flowy-handwriting-saber/src/: entities.rs  event_handler.rs  event_map.rs  lib.rs  manager.rs  saber.rs
frontend/rust-lib/flowy-handwriting-saber/src/protobuf/: entities.rs  event_map.rs  mod.rs
frontend/rust-lib/flowy-template/: Cargo.toml  MIGRATIONS.md  README.md
frontend/rust-lib/flowy-template/src/: cloud_impl.rs  entities.rs  event_handler.rs  lib.rs  manager.rs  migration.rs  services.rs  sync.rs
frontend/rust-lib/html-to-markdown/: Cargo.toml
frontend/rust-lib/html-to-markdown/src/: ffi.rs  lib.rs  main.rs
frontend/scripts/: build_appflowy_core_auto.sh  build_appflowy_core_auto_ci.sh  build_universal_dart_ffi.sh  register_ponynotes_protocol.bat
scripts/: build_ponynotes_msi.ps1  build_ponynotes_windows_release_zip.ps1
(+1310 files in other folders)
